modified:   k8s/k8s-api-deployment.yml 	modified:   setup.sh

--- a/k8s/k8s-api-deployment.yml
+++ b/k8s/k8s-api-deployment.yml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: rains-tomorrow-api
         image: einza/rains_tomorrow_api
+        imagePullPolicy: Never
         ports:
         - containerPort: 8000
